# cmakelists_demo

./: .gitignore  CMakeLists.txt  main.c  readme.md
libraries/: CMakeLists.txt  print_msg.c  print_msg.h
main/: CMakeLists.txt
